Inserting Material design

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.padding-top-15 {
+    padding-top: 15px;
+}
+.padding-top-5 {
+    padding-top: 5px;
+}
