--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,13 @@
-<div>
-    <label>Please Enter Your Name:</label>
-</div>
-<input [(ngModel)] = "name">
-<button (click) = "showTitle = true">Submit</button>
-<div *ngIf="showTitle">Thanks {{name}}</div>
+<mat-card>
+    <mat-form-field appearance="outline">
+        <mat-label>What's your name?</mat-label>
+        <input matInput type="text" [(ngModel)] = "name">
+    </mat-form-field>
+    <div>
+        <button mat-flat-button color="primary" class="padding-top-15"(click) = "showTitle = true">Submit</button>
+    </div>
+    <div class="padding-top-15" *ngIf="showTitle">
+        <mat-divider></mat-divider>
+        <div class="padding-top-5" *ngIf="showTitle">Thanks {{name}}</div>
+    </div>
+</mat-card>
