--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,13 +1,8 @@
-<mat-card>
-    <mat-form-field appearance="outline">
-        <mat-label>What's your name?</mat-label>
-        <input matInput type="text" (input)= "showTitle = false" [(ngModel)] = "name">
-    </mat-form-field>
-    <div>
-        <button mat-flat-button color="primary" class="padding-top-15" (click)= "showTitle = true">Submit</button>
-    </div>
-    <div class="padding-top-15" *ngIf="showTitle">
-        <mat-divider></mat-divider>
-        <div class="padding-top-5" *ngIf="showTitle">Thanks {{name}}</div>
-    </div>
-</mat-card>
+<div class="medium-title">Thanks for visiting my site!</div>
+<mat-form-field class="padding-top-15" appearance="outline">
+    <mat-label>Whats your name?</mat-label>
+    <input tabindex="-1" matInput type="text" [(ngModel)]="data.name">
+</mat-form-field>
+<div >
+    <button mat-flat-button color="primary" (click)="closeDialog()">Show Site</button>
+</div>
