--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+@import '~material-design-icons/iconfont/material-icons.css';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .padding-top-15 {
@@ -7,3 +8,66 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .padding-top-5 {
     padding-top: 5px;
 }
+
+.padding-bottom-5 {
+    padding-bottom: 5px;
+}
+
+.padding-bottom-15 {
+    padding-bottom: 15px;
+}
+
+.medium-title {
+    margin-left: 5px;
+    font-size: larger;
+    font-weight: 450;
+    color: #673ab7;
+}
+
+.primary {
+    color: #673ab7;
+}
+
+
+.background {
+    height: auto;
+    max-height: 100%;
+    width: 100%;
+    filter: brightness(50%)
+    }
+    
+    .center-text {
+        text-align: center;
+        color: white;
+    }
+
+    .centered {
+        position: absolute;
+        font-weight: bold;
+        font-size: 140%;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
+    .large {
+        font-size: 175%;
+        font-weight: bold;
+        margin-bottom: 5px;
+    }
+
+    .bottom {
+        position: absolute;
+        width: 100%;
+        top: 80%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+
+    .bellow {
+        position: absolute;
+        width: 100%;
+        top: 100%;
+        left: 50%;
+        transform: translate(-50%, 50%);
+    }
+    
