--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,20 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: #673ab7;
 }
 
+.small-title {
+    margin-left: 5px;
+    font-size: medium;
+    font-weight:450;
+    color: #673ab7;
+}
+
+.tiny-title {
+    margin-left: 5px;
+    font-size: small;
+    font-weight: 450;
+    color: #673ab7;
+}
+
 .primary {
     color: #673ab7;
 }
