--- a/src/app/about-accordian/about-accordian.component.html
+++ b/src/app/about-accordian/about-accordian.component.html
@@ -26,9 +26,9 @@
           <mat-grid-list cols="4">
             <mat-grid-tile>
               <mat-card>
-                <mat-card-title class= "primary">Startup Park (in progress)</mat-card-title>
+                <mat-card-title class= "primary">Startup Park</mat-card-title>
                 <picture>
-                  <img src="../../assets/img/AWS.png" alt="aws">
+                  <img src="../../assets/img/AWS.jpg" alt="aws">
                 </picture>
                 <mat-chip-list>
                   <mat-chip color="primary" class="padding-top-5">CF</mat-chip>
@@ -39,40 +39,39 @@
             </mat-grid-tile>
             <mat-grid-tile>
               <mat-card>
-                <mat-card-title class= "primary">Startup Park (in progress)</mat-card-title>
+                <mat-card-title class= "primary">This Portfolio</mat-card-title>
                 <picture>
-                  <img src="../../assets/img/AWS.png" alt="aws">
+                  <img src="../../assets/img/angular.png" alt="aws">
                 </picture>
                 <mat-chip-list>
-                  <mat-chip color="primary" class="padding-top-5">CF</mat-chip>
-                  <mat-chip color="primary" class="padding-top-5">Route 53</mat-chip>
-                  <mat-chip color="primary" class="padding-top-5">React</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">Angular</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">SCSS</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">Material</mat-chip>
                 </mat-chip-list>
               </mat-card>
             </mat-grid-tile>
             <mat-grid-tile>
               <mat-card>
-                <mat-card-title class= "primary">Startup Park (in progress)</mat-card-title>
+                <mat-card-title class= "primary">1 Day Challenge</mat-card-title>
                 <picture>
-                  <img src="../../assets/img/AWS.png" alt="aws">
+                  <img src="../../assets/img/html.png" alt="aws">
                 </picture>
                 <mat-chip-list>
-                  <mat-chip color="primary" class="padding-top-5">CF</mat-chip>
-                  <mat-chip color="primary" class="padding-top-5">Route 53</mat-chip>
-                  <mat-chip color="primary" class="padding-top-5">React</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">HTML</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">CSS</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">JS</mat-chip>
                 </mat-chip-list>
               </mat-card>
             </mat-grid-tile>
             <mat-grid-tile>
               <mat-card>
-                <mat-card-title class= "primary">Startup Park (in progress)</mat-card-title>
+                <mat-card-title class= "primary">Culperit</mat-card-title>
                 <picture>
-                  <img src="../../assets/img/AWS.png" alt="aws">
+                  <img src="../../assets/img/react.png" alt="aws">
                 </picture>
                 <mat-chip-list>
-                  <mat-chip color="primary" class="padding-top-5">CF</mat-chip>
-                  <mat-chip color="primary" class="padding-top-5">Route 53</mat-chip>
-                  <mat-chip color="primary" class="padding-top-5">React</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">Owner</mat-chip>
+                  <mat-chip color="primary" class="padding-top-5">Foundational</mat-chip>
                 </mat-chip-list>
               </mat-card>
             </mat-grid-tile>
