--- a/src/app/about-accordian/about-accordian.component.html
+++ b/src/app/about-accordian/about-accordian.component.html
@@ -102,5 +102,6 @@
         </mat-expansion-panel-header>
         <div>I like food a lot</div>
     </mat-expansion-panel>
+    <div class="center-text footer"><img src="../assets/img/logo-rectangle.png" alt="aws"></div>
 </mat-accordion>
 
