--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,6 @@
     <div *ngIf="show" (click)="scroll(bottom)" class="bellow">
         <about-accordian ></about-accordian>
     </div>
-    <div class="bellow" #bottom></div>
+    <div #bottom class="inv-bottom"></div>
 </div>
 
