--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,8 +80,16 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     .bellow {
         position: absolute;
         width: 100%;
-        top: 100%;
+        top: 90%;
         left: 50%;
         transform: translate(-50%, 50%);
     }
-    
+
+    .footer {
+        background-color: white;
+        width: 100%;
+    }
+    .inv-bottom{
+        position: relative;
+        top:100%
+    }
