--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,29 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import '~material-design-icons/iconfont/material-icons.css';
-html, body { height: 100%; }
+html, body { height: 100%;
+    background: url(assets/img/background.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    align-content: center;
+}
+
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 .padding-top-15 {
     padding-top: 15px;
 }
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
+    border: 3px solid green;
+  }
+
+
 .padding-top-5 {
     padding-top: 5px;
 }
@@ -44,52 +63,49 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 .background {
-    height: auto;
-    max-height: 100%;
+    height: 100%;
     width: 100%;
     filter: brightness(50%)
-    }
-    
-    .center-text {
-        text-align: center;
-        color: white;
-    }
+}
 
-    .centered {
-        position: absolute;
-        font-weight: bold;
-        font-size: 140%;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-    }
-    .large {
-        font-size: 175%;
-        font-weight: bold;
-        margin-bottom: 5px;
-    }
+.center-text {
+    font-size: 140%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+}
 
-    .bottom {
-        position: absolute;
-        width: 100%;
-        top: 80%;
-        left: 50%;
-        transform: translate(-50%, 50%);
-    }
+.large {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 175%;
+    font-weight: bold;
+    margin-top: 200px;
+    margin-bottom: 5px;
+}
 
-    .bellow {
-        position: absolute;
-        width: 100%;
-        top: 90%;
-        left: 50%;
-        transform: translate(-50%, 50%);
-    }
+.bottom {
+    text-align: center;
+    color: white;
+    margin-top: 150px;
+    margin-bottom: 150px;
+}
 
-    .footer {
-        background-color: white;
-        width: 100%;
-    }
-    .inv-bottom{
-        position: relative;
-        top:100%
-    }
+.bellow {
+    width: 100%;
+    top: 90%;
+    left: 50%;
+}
+
+.footer {
+    background-color: white;
+    width: 100%;
+}
+.inv-bottom{
+    position: relative;
+    top:100%
+}
