Style and add work history

--- a/src/app/about-accordian/about-accordian.component.html
+++ b/src/app/about-accordian/about-accordian.component.html
@@ -1,11 +1,11 @@
 <mat-accordion >
     <mat-expansion-panel >
         <mat-expansion-panel-header >
-            <mat-panel-title class="medium-title">
+            <mat-panel-title class="medium-title primary">
             My Philosophy
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div class="small-title">I have a few basic tennents by which I like to live:
+        <div class="small-title secondary">I have a few basic tennents by which I like to live:
           <mat-card>
             <mat-list>
               <mat-list-item><mat-icon>code</mat-icon><div class="tiny-title"> Always look for areas of improvement</div></mat-list-item>
@@ -18,7 +18,7 @@
     </mat-expansion-panel>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
-            <mat-panel-title  class="medium-title">
+            <mat-panel-title  class="medium-title primary">
             Projects
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -26,15 +26,15 @@
     </mat-expansion-panel>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
-            <mat-panel-title class="medium-title">
+            <mat-panel-title class="medium-title primary">
             Work History
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div>not too much</div>
+        <app-work-history></app-work-history>
     </mat-expansion-panel>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
-            <mat-panel-title  class="medium-title">
+            <mat-panel-title  class="medium-title primary">
             Certifications
           </mat-panel-title>
         </mat-expansion-panel-header>
@@ -42,7 +42,7 @@
     </mat-expansion-panel>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
-            <mat-panel-title  class="medium-title">
+            <mat-panel-title  class="medium-title primary">
             More About Me
           </mat-panel-title>
         </mat-expansion-panel-header>
