--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
             <div id="attribute3" class="padding-top-15 center-text"></div>
         </div>
         <div *ngIf="show" class="bottom padding-top-15" (click)="scroll(bottom)"><div>See more about me </div><mat-icon>code</mat-icon></div>
-        <div *ngIf="show" (click)="scroll(bottom)" class="bellow">
+        <div *ngIf="show" class="bellow">
             <about-accordian ></about-accordian>
         </div>
     </div>
