--- a/src/app/projects-content/projects-content.component.html
+++ b/src/app/projects-content/projects-content.component.html
@@ -3,51 +3,51 @@
       <mat-grid-tile>
         <mat-card>
           <mat-card-title class= "primary">Startup Park</mat-card-title>
-          <picture>
+          <picture class="center">
             <img src="../../assets/img/AWS.jpg" alt="aws">
           </picture>
           <mat-chip-list>
-            <mat-chip color="primary" class="padding-top-5">CF</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">Route 53</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">React</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>CF</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>Route 53</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>React</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
       <mat-grid-tile>
         <mat-card>
           <mat-card-title class= "primary">This Portfolio</mat-card-title>
-          <picture>
+          <picture class="center">
             <img src="../../assets/img/angular.png" alt="aws">
           </picture>
           <mat-chip-list>
-            <mat-chip color="primary" class="padding-top-5">Angular</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">SCSS</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">Material</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>Angular</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>SCSS</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>Material</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
       <mat-grid-tile>
         <mat-card>
           <mat-card-title class= "primary">1 Day Challenge</mat-card-title>
-          <picture>
+          <picture class="center">
             <img src="../../assets/img/html.png" alt="aws">
           </picture>
           <mat-chip-list>
-            <mat-chip color="primary" class="padding-top-5">HTML</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">CSS</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">JS</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>HTML</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>CSS</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>JS</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
       <mat-grid-tile>
         <mat-card>
           <mat-card-title class= "primary">Culperit</mat-card-title>
-          <picture>
+          <picture class="center">
             <img src="../../assets/img/react.png" alt="aws">
           </picture>
           <mat-chip-list>
-            <mat-chip color="primary" class="padding-top-5">Owner</mat-chip>
-            <mat-chip color="primary" class="padding-top-5">Foundational</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>Owner</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>Foundational</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
