Add work history

--- a/src/app/projects-content/projects-content.component.html
+++ b/src/app/projects-content/projects-content.component.html
@@ -48,6 +48,7 @@
           <mat-chip-list>
             <mat-chip color="accent" class="padding-top-5" selected>Owner</mat-chip>
             <mat-chip color="accent" class="padding-top-5" selected>Foundational</mat-chip>
+            <mat-chip color="accent" class="padding-top-5" selected>React</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
