--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
 <div class="medium-title">Thanks for visiting my site!</div>
 <div class="center">
-    <mat-form-field class="padding-top-15 center-no-flex" appearance="outline">
+    <mat-form-field class="padding-top-15" appearance="outline">
         <mat-label>Whats your name?</mat-label>
         <input  matInput type="text" [(ngModel)]="data.name" autocomplete="off">
     </mat-form-field>
