Update certs and favicon

--- a/src/app/about-accordian/about-accordian.component.html
+++ b/src/app/about-accordian/about-accordian.component.html
@@ -38,7 +38,7 @@
             Certifications
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div>Yeah good try</div>
+        <app-certifications></app-certifications>
     </mat-expansion-panel>
     <mat-expansion-panel>
         <mat-expansion-panel-header>
@@ -46,7 +46,7 @@
             More About Me
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div>I like food a lot</div>
+        <div>I am still working on this... hmm I am embarrassed... Uhh quick think of something clever "Why say lot word when few word do trick"</div>
     </mat-expansion-panel>
     <div class="center-text footer"><img src="../assets/img/logo-rectangle.png" alt="aws"></div>
 </mat-accordion>
