--- a/src/app/projects-content/projects-content.component.html
+++ b/src/app/projects-content/projects-content.component.html
@@ -1,4 +1,4 @@
-<div >
+<div>
     <mat-grid-list cols="4">
       <mat-grid-tile>
         <mat-card>
@@ -15,42 +15,46 @@
       </mat-grid-tile>
       <mat-grid-tile>
         <mat-card>
-          <mat-card-title class= "primary">This Portfolio</mat-card-title>
-          <picture class="center">
-            <img src="../../assets/img/angular.png" alt="aws">
-          </picture>
-          <mat-chip-list>
-            <mat-chip color="accent" class="padding-top-5" selected>Angular</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>SCSS</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>Material</mat-chip>
-          </mat-chip-list>
-        </mat-card>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-card>
-          <mat-card-title class= "primary">1 Day Challenge</mat-card-title>
-          <picture class="center">
-            <img src="../../assets/img/html.png" alt="aws">
-          </picture>
-          <mat-chip-list>
-            <mat-chip color="accent" class="padding-top-5" selected>HTML</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>CSS</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>JS</mat-chip>
-          </mat-chip-list>
-        </mat-card>
-      </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-card>
-          <mat-card-title class= "primary">Culperit</mat-card-title>
-          <picture class="center">
-            <img src="../../assets/img/react.png" alt="aws">
-          </picture>
-          <mat-chip-list>
-            <mat-chip color="accent" class="padding-top-5" selected>Owner</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>Foundational</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>React</mat-chip>
-          </mat-chip-list>
-        </mat-card>
+          <a class= "no-underline" href="https://github.com/KeifferCulbreth/Portfolio"  target="_blank">
+            <mat-card-title class= "primary">This Portfolio</mat-card-title>
+            <picture class="center">
+              <img src="../../assets/img/angular.png" alt="aws">
+            </picture>
+            <mat-chip-list>
+              <mat-chip color="accent" class="padding-top-5" selected>Angular</mat-chip>
+              <mat-chip color="accent" class="padding-top-5" selected>SCSS</mat-chip>
+              <mat-chip color="accent" class="padding-top-5" selected>Material</mat-chip>
+            </mat-chip-list>
+          </a>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-card>
+            <a class= "no-underline" href="https://github.com/KeifferCulbreth/1Day-Challenge"  target="_blank">
+            <mat-card-title class= "primary">1 Day Challenge</mat-card-title>
+            <picture class="center">
+              <img src="../../assets/img/html.png" alt="aws">
+            </picture>
+            <mat-chip-list>
+              <mat-chip color="accent" class="padding-top-5" selected>HTML</mat-chip>
+              <mat-chip color="accent" class="padding-top-5" selected>CSS</mat-chip>
+              <mat-chip color="accent" class="padding-top-5" selected>JS</mat-chip>
+            </mat-chip-list>
+          </a>
+          </mat-card>
+        </mat-grid-tile>
+        <mat-grid-tile>
+          <mat-card>
+            <mat-card-title class= "primary">Culperit</mat-card-title>
+            <picture class="center">
+              <img src="../../assets/img/react.png" alt="aws">
+            </picture>
+            <mat-chip-list>
+              <mat-chip color="accent" class="padding-top-5" selected>Foundational</mat-chip>
+              <mat-chip color="accent" class="padding-top-5" selected>Owner</mat-chip>
+              <mat-chip color="accent" class="padding-top-5" selected>CEO</mat-chip>
+            </mat-chip-list>
+          </mat-card>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
