make slightly responsive

--- a/src/app/projects-content/projects-content.component.html
+++ b/src/app/projects-content/projects-content.component.html
@@ -1,58 +1,58 @@
 <div>
     <mat-grid-list cols="4">
-      <mat-grid-tile>
-        <mat-card>
-          <mat-card-title class= "primary">Startup Park</mat-card-title>
+      <mat-grid-tile class="icon"e>
+        <mat-card class="full">
+          <mat-card-title class= "primary scale">Startup Park</mat-card-title>
           <picture class="center">
-            <img src="../../assets/img/AWS.jpg" alt="aws">
+            <img class="half" src="../../assets/img/AWS.jpg" alt="aws">
           </picture>
           <mat-chip-list>
-            <mat-chip color="accent" class="padding-top-5" selected>CF</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>Route 53</mat-chip>
-            <mat-chip color="accent" class="padding-top-5" selected>React</mat-chip>
+            <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>CF</mat-chip>
+            <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Route 53</mat-chip>
+            <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>React</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-card>
+      <mat-grid-tile class="icon">
+        <mat-card class="full">
           <a class= "no-underline" href="https://github.com/KeifferCulbreth/Portfolio"  target="_blank">
-            <mat-card-title class= "primary">This Portfolio</mat-card-title>
+            <mat-card-title class= "primary scale">This Portfolio</mat-card-title>
             <picture class="center">
-              <img src="../../assets/img/angular.png" alt="aws">
+              <img class="half" src="../../assets/img/angular.png" alt="aws">
             </picture>
             <mat-chip-list>
-              <mat-chip color="accent" class="padding-top-5" selected>Angular</mat-chip>
-              <mat-chip color="accent" class="padding-top-5" selected>SCSS</mat-chip>
-              <mat-chip color="accent" class="padding-top-5" selected>Material</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Angular</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>SCSS</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Material</mat-chip>
             </mat-chip-list>
           </a>
           </mat-card>
         </mat-grid-tile>
-        <mat-grid-tile>
-          <mat-card>
+        <mat-grid-tile class="icon">
+          <mat-card class="full">
             <a class= "no-underline" href="https://github.com/KeifferCulbreth/1Day-Challenge"  target="_blank">
-            <mat-card-title class= "primary">1 Day Challenge</mat-card-title>
+            <mat-card-title class= "primary scale">1 Day Challenge</mat-card-title>
             <picture class="center">
-              <img src="../../assets/img/html.png" alt="aws">
+              <img class="half" src="../../assets/img/html.png" alt="aws">
             </picture>
             <mat-chip-list>
-              <mat-chip color="accent" class="padding-top-5" selected>HTML</mat-chip>
-              <mat-chip color="accent" class="padding-top-5" selected>CSS</mat-chip>
-              <mat-chip color="accent" class="padding-top-5" selected>JS</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>HTML</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>CSS</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>JS</mat-chip>
             </mat-chip-list>
           </a>
           </mat-card>
         </mat-grid-tile>
-        <mat-grid-tile>
-          <mat-card>
-            <mat-card-title class= "primary">Culperit</mat-card-title>
+        <mat-grid-tile class="icon">
+          <mat-card class="full">
+            <mat-card-title class= "primary scale">Culperit</mat-card-title>
             <picture class="center">
-              <img src="../../assets/img/react.png" alt="aws">
+              <img class="half" src="../../assets/img/react.png" alt="aws">
             </picture>
             <mat-chip-list>
-              <mat-chip color="accent" class="padding-top-5" selected>Foundational</mat-chip>
-              <mat-chip color="accent" class="padding-top-5" selected>Owner</mat-chip>
-              <mat-chip color="accent" class="padding-top-5" selected>CEO</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Foundational</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Owner</mat-chip>
+              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>CEO</mat-chip>
             </mat-chip-list>
           </mat-card>
       </mat-grid-tile>
