--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -1,26 +1,26 @@
 <div>
     <mat-grid-list cols="4">
-      <mat-grid-tile>
-        <mat-card>
-          <mat-card-title class= "primary">AWS Solutions Architect</mat-card-title>
+      <mat-grid-tile class="icon">
+        <mat-card class="full">
+          <mat-card-title class= "primary scale">AWS Solutions Architect</mat-card-title>
           <picture class="center">
-            <img src="../../assets/img/AWS.jpg" alt="aws">
+            <img class="half" src="../../assets/img/AWS.jpg" alt="aws">
           </picture>
         </mat-card>
       </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-card>
-          <mat-card-title class= "primary">SumoLogic Foundations</mat-card-title>
+      <mat-grid-tile class="icon">
+        <mat-card class="full">
+          <mat-card-title class= "primary scale">SumoLogic Foundations</mat-card-title>
           <picture class="center">
-            <img src="../../assets/img/sumo-logic.jpg" alt="aws">
+            <img class="half" src="../../assets/img/sumo-logic.jpg" alt="aws">
           </picture>
         </mat-card>
       </mat-grid-tile>
-      <mat-grid-tile>
-        <mat-card>
-          <mat-card-title class= "primary">Professional Scrum Master</mat-card-title>
+      <mat-grid-tile class="icon">
+        <mat-card class="full">
+          <mat-card-title class= "primary scale">Professional Scrum Master</mat-card-title>
           <picture class="center">
-            <img src="../../assets/img/scrum.png" alt="aws">
+            <img class="half" src="../../assets/img/scrum.png" alt="aws">
           </picture>
         </mat-card>
       </mat-grid-tile>
