--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -1,46 +1,46 @@
 <mat-tab-group dynamicHeight>
   <mat-tab label="SEO Intern">
     <mat-card>
-      <mat-card-title class= "secondary">State Farm: Summer 2016</mat-card-title>
+      <mat-card-title class= "secondary scale">State Farm: Summer 2016</mat-card-title>
       <picture class="center">
-        <img src="../../assets/img/StateFarm.jpg" alt="aws">
+        <img class="half" src="../../assets/img/StateFarm.jpg" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
-          <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Worked on SEO and Improved website views by 150%</div></mat-list-item>
-          <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Handled social media marketing</div></mat-list-item>
-          <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Took class and required test resulting in a NC PL Insurance License</div></mat-list-item>
-          <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Trained staff on effective technology use</div></mat-list-item>
+          <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Worked on SEO and Improved website views by 150%</div></mat-list-item>
+          <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Handled social media marketing</div></mat-list-item>
+          <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Took class and required test resulting in a NC PL Insurance License</div></mat-list-item>
+          <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Trained staff on effective technology use</div></mat-list-item>
       </mat-list>
     </mat-card>
   </mat-tab>
   <mat-tab label="Leadership Development Program">
     <mat-card>
-      <mat-card-title class= "secondary">The Hartford: 2017-2020</mat-card-title>
+      <mat-card-title class= "secondary scale">The Hartford: 2017-2020</mat-card-title>
       <picture class="center">
-        <img src="../../assets/img/hartford.png" alt="aws">
+        <img class="half" src="../../assets/img/hartford.png" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Main developer on automatic premium calculation</div></mat-list-item>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Trained in Scrum, management techniques, and process improvement</div></mat-list-item>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Trained business partners in optimal use of available technology</div></mat-list-item>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Developer on worker's compensation portal</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Main developer on automatic premium calculation</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Trained in Scrum, management techniques, and process improvement</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Trained business partners in optimal use of available technology</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Developer on worker's compensation portal</div></mat-list-item>
       </mat-list>
     </mat-card>
   </mat-tab>
   <mat-tab label="Full Stack Agile Developer">
     <mat-card>
-      <mat-card-title class= "secondary">The Hartford: 2020-present</mat-card-title>
+      <mat-card-title class= "secondary scale">The Hartford: 2020-present</mat-card-title>
       <picture class="center">
-        <img src="../../assets/img/hartford.png" alt="aws">
+        <img class="half" src="../../assets/img/hartford.png" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Implemented digital portal built in Angular for Worker's Compensation</div></mat-list-item>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Spearheaded dynamically formed pages (using form builders) based on complex api responses</div></mat-list-item>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Adapted AWS tools to extract data and automate API workflow for automated claims</div></mat-list-item>
-        <mat-list-item><mat-icon>done</mat-icon><div class="tiny-title "> Lead tech meetings to share cross-learning opportunities</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Implemented digital portal built in Angular for Worker's Compensation</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Spearheaded dynamically formed web-pages based on complex api responses</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Adapted AWS tools to extract data and automate API workflow for automated claims</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Lead tech meetings to share cross-learning opportunities</div></mat-list-item>
       </mat-list>
     </mat-card>
   </mat-tab>
