--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -2,7 +2,7 @@
     <mat-grid-list cols="4">
       <mat-grid-tile class="icon">
         <mat-card class="full">
-          <mat-card-title class= "primary scale">AWS Solutions Architect</mat-card-title>
+          <mat-card-title class= "primary scale-multi">AWS Solutions Architect</mat-card-title>
           <picture class="center">
             <img class="half" src="../../assets/img/AWS.jpg" alt="aws">
           </picture>
@@ -10,7 +10,7 @@
       </mat-grid-tile>
       <mat-grid-tile class="icon">
         <mat-card class="full">
-          <mat-card-title class= "primary scale">SumoLogic Foundations</mat-card-title>
+          <mat-card-title class= "primary scale-multi">SumoLogic Foundations</mat-card-title>
           <picture class="center">
             <img class="half" src="../../assets/img/sumo-logic.jpg" alt="aws">
           </picture>
@@ -18,7 +18,7 @@
       </mat-grid-tile>
       <mat-grid-tile class="icon">
         <mat-card class="full">
-          <mat-card-title class= "primary scale">Professional Scrum Master</mat-card-title>
+          <mat-card-title class= "primary scale-multi">Professional Scrum Master</mat-card-title>
           <picture class="center">
             <img class="half" src="../../assets/img/scrum.png" alt="aws">
           </picture>
