--- a/src/app/projects-content/projects-content.component.html
+++ b/src/app/projects-content/projects-content.component.html
@@ -31,7 +31,7 @@
         <mat-grid-tile class="icon">
           <mat-card class="full">
             <a class= "no-underline" href="https://github.com/KeifferCulbreth/1Day-Challenge"  target="_blank">
-            <mat-card-title class= "primary scale">1 Day Challenge</mat-card-title>
+            <mat-card-title class= "primary scale">Challenge</mat-card-title>
             <picture class="center">
               <img class="half" src="../../assets/img/html.png" alt="aws">
             </picture>
