--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 2vw;
 }
 
+.scale-multi {
+    font-size: 1.5vw;
+}
+
 .center {
     display: flex;
     justify-content: center;
