add additional mobile support and quicker type

--- a/src/app/projects-content/projects-content.component.html
+++ b/src/app/projects-content/projects-content.component.html
@@ -7,9 +7,9 @@
             <img class="half" src="../../assets/img/AWS.jpg" alt="aws">
           </picture>
           <mat-chip-list>
-            <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>CF</mat-chip>
-            <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Route 53</mat-chip>
-            <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>React</mat-chip>
+            <mat-chip color="accent" class="hidden-sm" selected>CF</mat-chip>
+            <mat-chip color="accent" class="hidden-sm" selected>Route 53</mat-chip>
+            <mat-chip color="accent" class="hidden-sm" selected>React</mat-chip>
           </mat-chip-list>
         </mat-card>
       </mat-grid-tile>
@@ -21,9 +21,9 @@
               <img class="half" src="../../assets/img/angular.png" alt="aws">
             </picture>
             <mat-chip-list>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Angular</mat-chip>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>SCSS</mat-chip>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Material</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>Angular</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>SCSS</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>Material</mat-chip>
             </mat-chip-list>
           </a>
           </mat-card>
@@ -31,14 +31,14 @@
         <mat-grid-tile class="icon">
           <mat-card class="full">
             <a class= "no-underline" href="https://github.com/KeifferCulbreth/1Day-Challenge"  target="_blank">
-            <mat-card-title class= "primary scale">Challenge</mat-card-title>
+            <mat-card-title class= "primary scale">Challenge       </mat-card-title>
             <picture class="center">
               <img class="half" src="../../assets/img/html.png" alt="aws">
             </picture>
             <mat-chip-list>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>HTML</mat-chip>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>CSS</mat-chip>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>JS</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>HTML</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>CSS</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>JS</mat-chip>
             </mat-chip-list>
           </a>
           </mat-card>
@@ -50,9 +50,9 @@
               <img class="half" src="../../assets/img/react.png" alt="aws">
             </picture>
             <mat-chip-list>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Foundational</mat-chip>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>Owner</mat-chip>
-              <mat-chip color="accent" class="padding-top-5 hidden-sm" selected>CEO</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>Foundational</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>Owner</mat-chip>
+              <mat-chip color="accent" class="hidden-sm" selected>CEO</mat-chip>
             </mat-chip-list>
           </mat-card>
       </mat-grid-tile>
