--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,10 +1,10 @@
 <div class="medium-title">Thanks for visiting my site!</div>
-<div class="center">
+<div class="center align-center">
     <mat-form-field class="padding-top-15" appearance="outline">
         <mat-label>Whats your name?</mat-label>
         <input  matInput type="text" [(ngModel)]="data.name" autocomplete="off">
     </mat-form-field>
 </div>
-<div class="center">
+<div class="center align-center">
     <button mat-flat-button color="primary" (click)="closeDialog()">Show Site</button>
 </div>
