--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -1,9 +1,9 @@
 <mat-tab-group dynamicHeight>
   <mat-tab label="SEO Intern">
     <mat-card>
-      <mat-card-title class= "secondary scale">State Farm: Summer 2016</mat-card-title>
-      <picture class="center">
-        <img class="half" src="../../assets/img/StateFarm.jpg" alt="aws">
+      <mat-card-title class= "secondary">State Farm: Summer 2016</mat-card-title>
+      <picture class="center align-center">
+        <img src="../../assets/img/StateFarm.jpg" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
@@ -16,9 +16,9 @@
   </mat-tab>
   <mat-tab label="Leadership Development Program">
     <mat-card>
-      <mat-card-title class= "secondary scale">The Hartford: 2017-2020</mat-card-title>
-      <picture class="center">
-        <img class="half" src="../../assets/img/hartford.png" alt="aws">
+      <mat-card-title class= "secondary">The Hartford: 2017-2020</mat-card-title>
+      <picture class="center align-center">
+        <img src="../../assets/img/hartford.png" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
@@ -31,9 +31,9 @@
   </mat-tab>
   <mat-tab label="Full Stack Agile Developer">
     <mat-card>
-      <mat-card-title class= "secondary scale">The Hartford: 2020-present</mat-card-title>
-      <picture class="center">
-        <img class="half" src="../../assets/img/hartford.png" alt="aws">
+      <mat-card-title class= "secondary">The Hartford: 2020-present</mat-card-title>
+      <picture class="center align-center">
+        <img src="../../assets/img/hartford.png" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
