--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,18 +34,23 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .half {
-    max-width:75%;
-    max-height:75%;
+    width:75%;
+    height:75%;
 }
 
 .full {
-    max-width:100%;
-    max-height:100%;
+    width:100%;
+    height:100%;
 }
 
 .icon {
-    max-width:25%;
-    max-height:25%;
+    width:25%;
+    height:25%;
+}
+
+.mat-grid-tile .mat-figure {
+    justify-content: space-between !important;
+    align-items: start !important;
 }
 
 .scale {
@@ -58,9 +63,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .center {
     display: flex;
-    justify-content: center;
     align-items: center;
-  }
+}
+
+.align-center {
+    justify-content: center;
+}
 
   .padding-top-15 {
     padding-top: 15px;
@@ -84,6 +92,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .margin-top-5 {
     margin-top: 5px;
+}
+
+.margin-bottom-5 {
+    margin-bottom: 5px;
 }
 
 .medium-title {
