fix for scaling

--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -1,28 +1,28 @@
 <div>
     <mat-grid-list cols="4">
       <mat-grid-tile class="icon">
-        <mat-card class="full">
-          <mat-card-title class= "primary scale-multi">AWS Solutions Architect</mat-card-title>
+        <div class="full">
+          <div class= "primary scale-multi">AWS Solutions Architect</div>
           <picture class="center">
-            <img class="half" src="../../assets/img/AWS.jpg" alt="aws">
+            <img class="half" src="../../assets/img/AWS.png" alt="aws">
           </picture>
-        </mat-card>
+        </div>
       </mat-grid-tile>
       <mat-grid-tile class="icon">
-        <mat-card class="full">
-          <mat-card-title class= "primary scale-multi">SumoLogic Foundations</mat-card-title>
+        <div class="full">
+          <div class= "primary scale-multi">SumoLogic Foundations</div>
           <picture class="center">
             <img class="half" src="../../assets/img/sumo-logic.jpg" alt="aws">
           </picture>
-        </mat-card>
+        </div>
       </mat-grid-tile>
       <mat-grid-tile class="icon">
-        <mat-card class="full">
-          <mat-card-title class= "primary scale-multi">Professional Scrum Master</mat-card-title>
+        <div class="full">
+          <div class= "primary scale-multi">Professional Scrum Master</div>
           <picture class="center">
             <img class="half" src="../../assets/img/scrum.png" alt="aws">
           </picture>
-        </mat-card>
+        </div>
       </mat-grid-tile>
     </mat-grid-list>
   </div>
