Update or resume

--- a/src/app/about-accordian/about-accordian.component.html
+++ b/src/app/about-accordian/about-accordian.component.html
@@ -46,7 +46,7 @@
             More About Me
           </mat-panel-title>
         </mat-expansion-panel-header>
-        <div>I am still working on this... hmm I am embarrassed... Uhh quick think of something clever "Why say lot word when few word do trick"</div>
+        <div>I am a fast learner with a strong work ethic. I will continue to build this website out, but wanted to display my initial work</div>
     </mat-expansion-panel>
     <div class="center-text footer"><img src="../assets/img/logo-rectangle.png" alt="aws"></div>
 </mat-accordion>
