--- a/src/app/work-history/work-history.component.html
+++ b/src/app/work-history/work-history.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group dynamicHeight>
   <mat-tab label="SEO Intern">
     <mat-card>
-      <mat-card-title class= "secondary">State Farm: Summer 2016</mat-card-title>
+      <mat-card-title class= "secondary">State Farm: Summer 2015</mat-card-title>
       <picture class="center align-center">
         <img src="../../assets/img/StateFarm.jpg" alt="aws">
       </picture>
@@ -16,13 +16,14 @@
   </mat-tab>
   <mat-tab label="Leadership Development Program">
     <mat-card>
-      <mat-card-title class= "secondary">The Hartford: 2017-2020</mat-card-title>
+      <mat-card-title class= "secondary">The Hartford: 2016-2020</mat-card-title>
       <picture class="center align-center">
         <img src="../../assets/img/hartford.png" alt="aws">
       </picture>
       <mat-divider></mat-divider>
       <mat-list>
-        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Main developer on automatic premium calculation</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Completed internship in PolicyCenter team</div></mat-list-item>
+        <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Primary developer on automatic premium calculation</div></mat-list-item>
         <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Trained in Scrum, management techniques, and process improvement</div></mat-list-item>
         <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Trained business partners in optimal use of available technology</div></mat-list-item>
         <mat-list-item class="margin-top-5"><mat-icon>done</mat-icon><div class="tiny-title "> Developer on worker's compensation portal</div></mat-list-item>
